* Added CSV report type
* Allow setting of password for xlsx, docx, ods, odt, pdf output
* Fix for group column not being saved
* Added ability to encrypt files in AES Crypt or OpenPGP format
* Allow job fixed file name, email subject, email body to have date expressions
* Allow parameter values to have groovy expressions
* Allow jobs to have multiple schedules
* Allow jobs to have holidays
* Allow jobs to use shared, fixed schedules
* Updated sqlite driver, jxls, univocity-parsers

ART 3.0.1
* Removed column autosizing for xls and xlsx output. Was causing greatly increased execution times for xlsx output.
* Always use report datasource for dynamic lovs
* For cached result job, don't stop if create table process has an error
* Don't sort DataTable report format on initialization
* Use select column filter for report group in reports page
* When editing a job, update from email if owner email has changed
* Don't use email input type for user email field
* Enable use of default report group
* Added SFTP option
* Fix for ftp not closing properly
* Fix for fixed file name being deleted
* Allow use of a single from email address for all jobs
* Fix for error with ods output with null number values
* Added option to omit title row for xls, xlsx, ods, slk output

ART 3.0
* Reorganised the code for easier maintenance and enhanced user experience
 - now using maven, spring mvc, bootstrap, among other libraries
* Renamed "Report on Column" query types to "Group"
* Renamed "Graph" query types to "Chart"
* Renamed "Query" concept to "Report"
* Renamed "View Modes" to "Report Formats"
* Renamed "Number" parameter data type to "Double"
* Renamed "Pivot Table" report types to "JPivot"
* Modified application settings configuration. Settings need to be manually re-entered.
* Modified application urls. Previously bookmarked urls may no longer work.
* Added ability to create reports based on FreeMarker templates
* Added ability to create reports based on Thymeleaf templates