@@ -14,7 +14,8 @@ ART 3.1
 * Allow parameter values to have groovy expressions
 * Allow jobs to have multiple schedules
 * Allow jobs to have holidays
-* Allow jobs to use shared, fixed schedules
+* Allow jobs to use shared schedules
+* Allow for clone reports, which use the source of another report
 * Updated sqlite driver, jxls, univocity-parsers
 
 ART 3.0.1
